# wordle-assistant

./: .gitignore  .gitmodules  Cargo.toml  README.md  content-script.ts  index.html  manifest.json  package-lock.json  package.json  popup.css  popup.ts  tsconfig.json
src/: lib.rs
